<resources>
    <string name="app_name">App Permisos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="title_activity_prefecto_inicio">PrefectoInicio</string>
    <string name="Host">http://puntosingular.mx/app_permisos/documento.php</string>
    <string name="imagen_inicio">Imagen inicio</string>
    <string name="contrase_a">Contraseña:</string>

    <string name="rfc">RFC:</string>
    <string name="ingrese_su_rfc">Ingrese su RFC</string>

    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="imagen_usuario">imagen usuario</string>
    <string name="buscador_curp">buscador_curp</string>

    <string name="nombre">Nombre:</string>
    <string name="nombre_del_usuario">nombre_del_usuario</string>
    <string name="apellido_paterno">Apellido Paterno:</string>
    <string name="apellido_materno">Apellido Materno:</string>
    <string name="docente">Docente:</string>
    <string name="nombre_del_docente">Nombre del docente</string>

    <string name="fecha_de_solicitud">Fecha de Solicitud:</string>
    <string name="fecha_de_solitud">Fecha de solicitud</string>

    <string name="tipo_de_permiso">Tipo de permiso:</string>
    <string name="tipo_de_permiso_solicitado">Tipo de permiso solicitado</string>
    <string name="descripcion_del_permiso">Descripcion del permiso</string>
    <string name="duraci_n_del_permiso">Duración del permiso:</string>
    <string name="periodo_de_duracion_del_permiso">Periodo permiso</string>

    <string name="denegado">Denegado</string>
    <string name="aprobado">Aprobado</string>

    <string name="solicitante">Solicitante:</string>
    <string name="nombre_del_usuario_que_solicita">Nombre del usuario que solicita</string>
    <string name="fecha_de_registro_de_la_solicitud">Fecha de registro de la solicitud:</string>
    <string name="fecha_del_registro_automaica">Fecha del registro (automaica)</string>

    <string name="descripci_n">Descripción:</string>
    <string name="periodo_del_permiso">Periodo del permiso:</string>

    <string name="fechai">Fecha De Inicio:</string>
    <string name="fechaf">Fecha De Fin:</string>
    <string name="Dia">Dia</string>
    <string name="Mes">Mes</string>
    <string name="Año">Año</string>
    <string name="Hora">Hora</string>
    <string name="Minutos">Minuto</string>
    <string name="Segundos">Segundo</string>

    <string name="enviar_solicitud_a">Enviar Solicitud a:</string>

    <string name="enviar">Enviar</string>
    <string name="cancelar">Cancelar</string>

    <string name="tipo_de_permiso_que_solicita">Tipo de Permiso que solicita</string>
    <string name="nombre_del_docente_que_solicito_permiso">Nombre del docente que solicito permiso</string>
    <string name="hora_inicio_permiso">Hora inicio permiso:</string>
    <string name="hora_fin_de_permiso">Hora fin de permiso:</string>
    <string name="h_o_f_que_termina_el_permiso">H o F que termina el permiso</string>
    <string name="h_o_f_que_inicia_el_permiso">H o F que inicia el permiso</string>

    <string name="docente_sin_puntos">Docente</string>
    <string name="directivo">Directivo</string>
    <string name="nombre_del_directivo">Nombre del directivo</string>
    <string name="prefecto">Prefecto</string>
    <string name="nombre_del_prefecto">Nombre del prefecto</string>

    <string name="tipoP">Permiso tipo: </string>
    <string name="dd_mm_aaaa">dd/mm/aaaa</string>
    <string name="autoriz">Autorizó:</string>
    <string name="persona_que_autorizo_permiso">Persona que autorizo Permiso</string>
    <string name="todos">Todos</string>
    <string name="aprobados">Aprobados</string>
    <string name="denegados">Denegados</string>
    <string name="pendientes">Pendientes</string>
    <string name="vacio">No se encuentra ningun permiso registrado</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="vacio2">No tiene solicitudes pendientes</string>
    <string name="vieja_contrasenia">Contraseña actual:</string>
    <string name="nueva_contrasenia">Nueva contraseña:</string>
    <string name="cambiar_contrasenia">Cambiar contraseña</string>
    <string name="vacio3">No hay permisos para el dia de hoy </string>



    <string name="aceptar">Aceptar</string>
    <string name="status">Estatus:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permiso_tipo">Permiso tipo</string>
</resources>
