<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="10dp"
    tools:context=".DetallesPermisosFragment">


    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="185dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen_usuario"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/docente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7" />

    <TextView
        android:id="@+id/tv_nombre_docente"
        style="@style/texto"
        android:layout_width="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nombre_del_docente"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7" />

    <TextView
        android:id="@+id/textView8"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/fecha_de_solicitud"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tv_fecha_solicitud"
        style="@style/texto"
        android:layout_width="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:hint="@string/fecha_de_solitud"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_docente" />

    <TextView
        android:id="@+id/textView9"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tipo_de_permiso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/tv_tipo_permiso"
        style="@style/texto"
        android:layout_width="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:hint="@string/tipo_de_permiso_solicitado"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha_solicitud" />

    <FrameLayout
        android:id="@+id/frameLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:layout_editor_absoluteX="10dp">

        <TextView
            android:id="@+id/tv_descripcion"
            style="@style/texto"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:hint="@string/descripcion_del_permiso"
            android:textAlignment="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView13"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/duraci_n_del_permiso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout8" />

    <TextView
        android:id="@+id/tv_periodo"
        style="@style/texto"
        android:layout_width="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/periodo_de_duracion_del_permiso"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout8" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_aprobado"
                style="@style/style_boton_confirmar"
                android:layout_marginEnd="20dp"
                android:text="@string/aprobado" />

            <Button
                android:id="@+id/btn_rechazado"
                style="@style/style_boton_cancelar"
                android:text="@string/denegado" />
        </LinearLayout>

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>