<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Registro_Activity">


    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="185dp"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen_usuario"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>


    <TextView
        style="@style/titulos"
        android:id="@+id/textNombre5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/rfc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7" />


    <EditText
        android:id="@+id/txtCurp"
        style="@style/cajasTexto"
        android:layout_marginStart="48dp"
        android:layout_marginTop="29dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textNombre5"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
        tools:ignore="LabelFor"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textNombre"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre5" />


    <EditText
        android:id="@+id/txtNombre"
        style="@style/cajasTexto"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtCurp"
        tools:ignore="LabelFor"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textPaterno"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/apellido_paterno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <EditText
        android:id="@+id/txtPaterno"
        style="@style/cajasTexto"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textPaterno"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        tools:ignore="LabelFor" tools:targetApi="o" />


    <TextView
        android:id="@+id/textMaterno"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/apellido_materno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPaterno" />


    <EditText
        android:id="@+id/txtMaterno"
        style="@style/cajasTexto"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textMaterno"
        app:layout_constraintTop_toBottomOf="@+id/txtPaterno"
        tools:ignore="LabelFor" tools:targetApi="o" />


    <TextView
        android:id="@+id/textContra"
        style="@style/titulos"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/contrase_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMaterno" />

    <EditText
        android:id="@+id/txtContraseña"
        style="@style/cajasTexto"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textContra"
        app:layout_constraintTop_toBottomOf="@+id/txtMaterno" tools:targetApi="o"
        tools:ignore="LabelFor" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContraseña">

        <Button
            android:id="@+id/btnReg"
            android:layout_gravity="center"
            style="@style/style_boton_confirmar"
            android:text="@string/registrarse" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>