<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragments.PermisosFrag"
    android:id="@+id/frameLayout2" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/botones"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rb_todos"
            style="@style/titulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/todos"
            android:buttonTint="#FFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_aprobados"
            style="@style/titulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/aprobados"
            android:buttonTint="#FFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rb_denegados"
            style="@style/titulos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/denegados"
            android:buttonTint="#FFFF"
            android:textSize="16sp" />

    </RadioGroup>

    <ListView
        android:id="@+id/lv_permisos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>